# let-s-become-an-enginner

./: README.md
.devcontainer/: devcontainer.json
backend/: .env.template  .gitignore  README.md  app.py  pyproject.toml
backend/docs/: LOGGING.md
backend/instance/: readfit.db
backend/src/: database.py  genres.py  models.py  moods.py  novelGenerator.py  novelist.py  novels.py  status.py  test.py  tests.py  users.py
backend/src/seeds/: genres.py  moods.py
backend/src/services/: error_handler.py  gemini_exceptions.py  gemini_retry.py  gemini_validator.py  novel_generator.py  novelist.py
novel_app/: .gitignore  pubspec.yaml
novel_app/lib/: main.dart
novel_app/lib/models/: generated_novel.dart  genre.dart  mood.dart  novel.dart  novel_content.dart  user.dart
novel_app/lib/screens/: api_test.dart  generatepage.dart  viewpage.dart
novel_app/lib/screens/novel_generate/: get_generate_settings.dart  novel_generate_screen.dart  novel_generating_screen.dart
novel_app/lib/screens/novel_list/: novel_list_screen.dart
novel_app/lib/screens/novel_list/widgets/: novel_card.dart
novel_app/lib/screens/novel_view/: novel_view_screen.dart
novel_app/lib/screens/novel_view/widgets/: novel_scroll.dart
novel_app/lib/utils/: api_config.dart  api_service.dart  generate_novel.dart  get_generate_settings.dart  get_mood_setting.dart  get_novel_content.dart  get_rest_novel.dart  get_user_all_novels.dart  user_api.dart
novel_app/lib/widgets/: generate_novel_screen_button.dart
