[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "uuid>=1.30",
]
